--- a/src/View/AddCustomerConfirm.form
+++ b/src/View/AddCustomerConfirm.form
@@ -48,39 +48,38 @@
                               <Component id="jSeparator1" max="32767" attributes="0"/>
                           </Group>
                       </Group>
-                      <Group type="102" attributes="0">
+                      <Group type="102" alignment="0" attributes="0">
+                          <EmptySpace min="-2" pref="59" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Group type="102" attributes="0">
-                                  <EmptySpace min="-2" pref="59" max="-2" attributes="0"/>
-                                  <Group type="103" groupAlignment="0" attributes="0">
-                                      <Component id="jlblCustID" alignment="0" min="-2" pref="172" max="-2" attributes="0"/>
-                                      <Component id="jlblName" alignment="0" min="-2" pref="172" max="-2" attributes="0"/>
-                                      <Component id="jlblGender" alignment="0" min="-2" pref="172" max="-2" attributes="0"/>
-                                      <Component id="jlblAge" alignment="0" min="-2" pref="172" max="-2" attributes="0"/>
-                                      <Component id="jlblContact" alignment="0" min="-2" pref="172" max="-2" attributes="0"/>
-                                  </Group>
-                                  <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
-                                  <Group type="103" groupAlignment="0" attributes="0">
-                                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                          <Component id="jtfGender" pref="100" max="32767" attributes="0"/>
-                                          <Component id="jtfCustID" max="32767" attributes="0"/>
-                                          <Component id="jtfAge" max="32767" attributes="0"/>
-                                          <Component id="jtfContactNo" max="32767" attributes="0"/>
-                                      </Group>
-                                      <Component id="jtfName" min="-2" pref="260" max="-2" attributes="0"/>
-                                  </Group>
+                              <Component id="jlblCustID" alignment="0" min="-2" pref="172" max="-2" attributes="0"/>
+                              <Component id="jlblName" alignment="0" min="-2" pref="172" max="-2" attributes="0"/>
+                              <Component id="jlblGender" alignment="0" min="-2" pref="172" max="-2" attributes="0"/>
+                              <Component id="jlblAge" alignment="0" min="-2" pref="172" max="-2" attributes="0"/>
+                              <Component id="jlblContact" alignment="0" min="-2" pref="172" max="-2" attributes="0"/>
+                              <Component id="jlblCreditLimit" min="-2" pref="172" max="-2" attributes="0"/>
+                          </Group>
+                          <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                  <Component id="jtfGender" pref="100" max="32767" attributes="0"/>
+                                  <Component id="jtfCustID" max="32767" attributes="0"/>
+                                  <Component id="jtfAge" max="32767" attributes="0"/>
+                                  <Component id="jtfContactNo" max="32767" attributes="0"/>
+                                  <Component id="jtfCreditLimit" alignment="0" max="32767" attributes="0"/>
                               </Group>
-                              <Group type="102" alignment="0" attributes="0">
-                                  <EmptySpace min="-2" pref="181" max="-2" attributes="0"/>
-                                  <Component id="jButton1" min="-2" pref="103" max="-2" attributes="0"/>
-                                  <EmptySpace min="-2" pref="38" max="-2" attributes="0"/>
-                                  <Component id="jButton2" min="-2" pref="92" max="-2" attributes="0"/>
-                              </Group>
+                              <Component id="jtfName" min="-2" pref="260" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
+              </Group>
+              <Group type="102" alignment="0" attributes="0">
+                  <EmptySpace min="-2" pref="162" max="-2" attributes="0"/>
+                  <Component id="jButton1" min="-2" pref="103" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="64" max="-2" attributes="0"/>
+                  <Component id="jButton2" min="-2" pref="92" max="-2" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -97,7 +96,7 @@
                       <Component id="jlblCustID" max="32767" attributes="0"/>
                       <Component id="jtfCustID" max="32767" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="12" max="32767" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="1" attributes="0">
                       <Group type="102" attributes="0">
                           <Component id="jtfName" min="-2" pref="30" max="-2" attributes="0"/>
@@ -129,12 +128,17 @@
                           <EmptySpace min="2" pref="2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
-                  <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
+                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                      <Component id="jtfCreditLimit" pref="35" max="32767" attributes="0"/>
+                      <Component id="jlblCreditLimit" max="32767" attributes="0"/>
+                  </Group>
+                  <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jButton1" alignment="3" min="-2" pref="36" max="-2" attributes="0"/>
                       <Component id="jButton2" alignment="3" min="-2" pref="36" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace min="-2" pref="67" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -262,6 +266,20 @@
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton2ActionPerformed"/>
           </Events>
+        </Component>
+        <Component class="javax.swing.JLabel" name="jlblCreditLimit">
+          <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="24" style="0"/>
+            </Property>
+            <Property name="horizontalAlignment" type="int" value="4"/>
+            <Property name="text" type="java.lang.String" value="Credit Limit:"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JTextField" name="jtfCreditLimit">
+          <Properties>
+            <Property name="editable" type="boolean" value="false"/>
+          </Properties>
         </Component>
       </SubComponents>
     </Container>
