--- a/src/View/AddFlowers.form
+++ b/src/View/AddFlowers.form
@@ -51,16 +51,11 @@
                       </Group>
                       <EmptySpace min="0" pref="123" max="32767" attributes="0"/>
                   </Group>
-                  <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Group type="102" attributes="0">
-                              <EmptySpace min="10" pref="10" max="-2" attributes="0"/>
-                              <Component id="jlblHeader" max="32767" attributes="0"/>
-                          </Group>
-                          <Component id="jlblTitle" pref="613" max="32767" attributes="0"/>
-                      </Group>
+                  <Group type="102" attributes="0">
+                      <EmptySpace min="-2" pref="22" max="-2" attributes="0"/>
+                      <Component id="jlblHeader" max="32767" attributes="0"/>
                   </Group>
+                  <Component id="jlblTitle" alignment="0" pref="625" max="32767" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
