--- a/src/View/AddCustomerConfirm.form
+++ b/src/View/AddCustomerConfirm.form
@@ -54,20 +54,20 @@
                               <Component id="jlblCustID" alignment="0" min="-2" pref="172" max="-2" attributes="0"/>
                               <Component id="jlblName" alignment="0" min="-2" pref="172" max="-2" attributes="0"/>
                               <Component id="jlblGender" alignment="0" min="-2" pref="172" max="-2" attributes="0"/>
-                              <Component id="jlblAge" alignment="0" min="-2" pref="172" max="-2" attributes="0"/>
                               <Component id="jlblContact" alignment="0" min="-2" pref="172" max="-2" attributes="0"/>
                               <Component id="jlblCreditLimit" min="-2" pref="172" max="-2" attributes="0"/>
+                              <Component id="jlblIC" alignment="0" min="-2" pref="172" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                   <Component id="jtfGender" pref="100" max="32767" attributes="0"/>
                                   <Component id="jtfCustID" max="32767" attributes="0"/>
-                                  <Component id="jtfAge" max="32767" attributes="0"/>
                                   <Component id="jtfContactNo" max="32767" attributes="0"/>
                                   <Component id="jtfCreditLimit" alignment="0" max="32767" attributes="0"/>
                               </Group>
                               <Component id="jtfName" min="-2" pref="260" max="-2" attributes="0"/>
+                              <Component id="jtfIC" min="-2" pref="260" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                       </Group>
@@ -105,22 +105,21 @@
                       <Component id="jlblName" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="1" attributes="0">
+                  <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" attributes="0">
-                          <Component id="jtfGender" min="-2" pref="26" max="-2" attributes="0"/>
-                          <EmptySpace min="1" pref="1" max="-2" attributes="0"/>
+                          <Component id="jlblIC" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="7" max="-2" attributes="0"/>
                       </Group>
+                      <Group type="102" alignment="1" attributes="0">
+                          <Component id="jtfIC" min="-2" pref="30" max="-2" attributes="0"/>
+                          <EmptySpace max="-2" attributes="0"/>
+                      </Group>
+                  </Group>
+                  <Group type="103" groupAlignment="1" attributes="0">
                       <Component id="jlblGender" min="-2" max="-2" attributes="0"/>
+                      <Component id="jtfGender" min="-2" pref="26" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="1" attributes="0">
-                      <Component id="jlblAge" min="-2" pref="29" max="-2" attributes="0"/>
-                      <Group type="102" attributes="0">
-                          <Component id="jtfAge" min="-2" pref="29" max="-2" attributes="0"/>
-                          <EmptySpace min="1" pref="1" max="-2" attributes="0"/>
-                      </Group>
-                  </Group>
-                  <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="1" attributes="0">
                       <Component id="jlblContact" max="32767" attributes="0"/>
                       <Group type="102" attributes="0">
@@ -193,15 +192,6 @@
             <Property name="text" type="java.lang.String" value="Gender:"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JLabel" name="jlblAge">
-          <Properties>
-            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Tahoma" size="24" style="0"/>
-            </Property>
-            <Property name="horizontalAlignment" type="int" value="4"/>
-            <Property name="text" type="java.lang.String" value="Age:"/>
-          </Properties>
-        </Component>
         <Component class="javax.swing.JLabel" name="jlblContact">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
@@ -231,11 +221,6 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="jtfGender">
-          <Properties>
-            <Property name="editable" type="boolean" value="false"/>
-          </Properties>
-        </Component>
-        <Component class="javax.swing.JTextField" name="jtfAge">
           <Properties>
             <Property name="editable" type="boolean" value="false"/>
           </Properties>
@@ -277,6 +262,20 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="jtfCreditLimit">
+          <Properties>
+            <Property name="editable" type="boolean" value="false"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JLabel" name="jlblIC">
+          <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="24" style="0"/>
+            </Property>
+            <Property name="horizontalAlignment" type="int" value="4"/>
+            <Property name="text" type="java.lang.String" value="IC No:"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JTextField" name="jtfIC">
           <Properties>
             <Property name="editable" type="boolean" value="false"/>
           </Properties>
