--- a/src/View/CustomerMaintenance.form
+++ b/src/View/CustomerMaintenance.form
@@ -94,8 +94,8 @@
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="jlblGender" min="-2" pref="172" max="-2" attributes="0"/>
                           <Component id="jlblName" min="-2" pref="172" max="-2" attributes="0"/>
-                          <Component id="jlblAge" alignment="0" min="-2" pref="172" max="-2" attributes="0"/>
                           <Component id="jlblContact" min="-2" pref="172" max="-2" attributes="0"/>
+                          <Component id="jlblIC" alignment="0" min="-2" pref="172" max="-2" attributes="0"/>
                       </Group>
                       <Component id="jbAdd" min="-2" pref="101" max="-2" attributes="0"/>
                   </Group>
@@ -105,11 +105,9 @@
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Component id="jtfName" min="-2" pref="207" max="-2" attributes="0"/>
                               <Component id="jtfContact" min="-2" pref="207" max="-2" attributes="0"/>
-                              <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
-                                  <Component id="jcbAge" alignment="0" max="32767" attributes="0"/>
-                                  <Component id="jcbGender" alignment="0" max="32767" attributes="0"/>
-                              </Group>
+                              <Component id="jcbGender" alignment="0" min="-2" max="-2" attributes="0"/>
                               <Component id="jtfCreditLimit" alignment="0" min="-2" pref="207" max="-2" attributes="0"/>
+                              <Component id="jtfIC" alignment="0" min="-2" pref="207" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
@@ -129,17 +127,22 @@
                       <Component id="jlblName" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jtfName" alignment="3" min="-2" pref="29" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="jlblGender" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jcbGender" alignment="3" min="-2" pref="33" max="-2" attributes="0"/>
+                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Group type="102" attributes="0">
+                          <Component id="jlblIC" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="9" max="-2" attributes="0"/>
+                      </Group>
+                      <Group type="102" alignment="1" attributes="0">
+                          <Component id="jtfIC" min="-2" pref="29" max="-2" attributes="0"/>
+                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      </Group>
+                  </Group>
+                  <Group type="103" groupAlignment="1" attributes="0">
+                      <Component id="jlblGender" min="-2" max="-2" attributes="0"/>
+                      <Component id="jcbGender" min="-2" pref="33" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="jlblAge" alignment="3" min="-2" pref="29" max="-2" attributes="0"/>
-                      <Component id="jcbAge" alignment="3" min="-2" pref="26" max="-2" attributes="0"/>
-                  </Group>
-                  <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
                       <Component id="jlblContact" max="32767" attributes="0"/>
                       <Component id="jtfContact" max="32767" attributes="0"/>
@@ -182,15 +185,6 @@
             <Property name="text" type="java.lang.String" value="Gender:"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JLabel" name="jlblAge">
-          <Properties>
-            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Tahoma" size="24" style="0"/>
-            </Property>
-            <Property name="horizontalAlignment" type="int" value="4"/>
-            <Property name="text" type="java.lang.String" value="Age:"/>
-          </Properties>
-        </Component>
         <Component class="javax.swing.JLabel" name="jlblContact">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
@@ -199,103 +193,6 @@
             <Property name="horizontalAlignment" type="int" value="4"/>
             <Property name="text" type="java.lang.String" value="Contact No:"/>
           </Properties>
-        </Component>
-        <Component class="javax.swing.JComboBox" name="jcbAge">
-          <Properties>
-            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Tahoma" size="14" style="0"/>
-            </Property>
-            <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="83">
-                <StringItem index="0" value="18"/>
-                <StringItem index="1" value="19"/>
-                <StringItem index="2" value="20"/>
-                <StringItem index="3" value="21"/>
-                <StringItem index="4" value="22"/>
-                <StringItem index="5" value="23"/>
-                <StringItem index="6" value="24"/>
-                <StringItem index="7" value="25"/>
-                <StringItem index="8" value="26"/>
-                <StringItem index="9" value="27"/>
-                <StringItem index="10" value="28"/>
-                <StringItem index="11" value="29"/>
-                <StringItem index="12" value="30"/>
-                <StringItem index="13" value="31"/>
-                <StringItem index="14" value="32"/>
-                <StringItem index="15" value="33"/>
-                <StringItem index="16" value="34"/>
-                <StringItem index="17" value="35"/>
-                <StringItem index="18" value="36"/>
-                <StringItem index="19" value="37"/>
-                <StringItem index="20" value="38"/>
-                <StringItem index="21" value="39"/>
-                <StringItem index="22" value="40"/>
-                <StringItem index="23" value="41"/>
-                <StringItem index="24" value="42"/>
-                <StringItem index="25" value="43"/>
-                <StringItem index="26" value="44"/>
-                <StringItem index="27" value="45"/>
-                <StringItem index="28" value="46"/>
-                <StringItem index="29" value="47"/>
-                <StringItem index="30" value="48"/>
-                <StringItem index="31" value="49"/>
-                <StringItem index="32" value="50"/>
-                <StringItem index="33" value="51"/>
-                <StringItem index="34" value="52"/>
-                <StringItem index="35" value="53"/>
-                <StringItem index="36" value="54"/>
-                <StringItem index="37" value="55"/>
-                <StringItem index="38" value="56"/>
-                <StringItem index="39" value="57"/>
-                <StringItem index="40" value="58"/>
-                <StringItem index="41" value="59"/>
-                <StringItem index="42" value="60"/>
-                <StringItem index="43" value="61"/>
-                <StringItem index="44" value="62"/>
-                <StringItem index="45" value="63"/>
-                <StringItem index="46" value="64"/>
-                <StringItem index="47" value="65"/>
-                <StringItem index="48" value="66"/>
-                <StringItem index="49" value="67"/>
-                <StringItem index="50" value="68"/>
-                <StringItem index="51" value="69"/>
-                <StringItem index="52" value="70"/>
-                <StringItem index="53" value="71"/>
-                <StringItem index="54" value="72"/>
-                <StringItem index="55" value="73"/>
-                <StringItem index="56" value="74"/>
-                <StringItem index="57" value="75"/>
-                <StringItem index="58" value="76"/>
-                <StringItem index="59" value="77"/>
-                <StringItem index="60" value="78"/>
-                <StringItem index="61" value="79"/>
-                <StringItem index="62" value="80"/>
-                <StringItem index="63" value="81"/>
-                <StringItem index="64" value="82"/>
-                <StringItem index="65" value="83"/>
-                <StringItem index="66" value="84"/>
-                <StringItem index="67" value="85"/>
-                <StringItem index="68" value="86"/>
-                <StringItem index="69" value="87"/>
-                <StringItem index="70" value="88"/>
-                <StringItem index="71" value="89"/>
-                <StringItem index="72" value="90"/>
-                <StringItem index="73" value="91"/>
-                <StringItem index="74" value="92"/>
-                <StringItem index="75" value="93"/>
-                <StringItem index="76" value="94"/>
-                <StringItem index="77" value="95"/>
-                <StringItem index="78" value="96"/>
-                <StringItem index="79" value="97"/>
-                <StringItem index="80" value="98"/>
-                <StringItem index="81" value="99"/>
-                <StringItem index="82" value="100"/>
-              </StringArray>
-            </Property>
-          </Properties>
-          <AuxValues>
-            <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
-          </AuxValues>
         </Component>
         <Component class="javax.swing.JComboBox" name="jcbGender">
           <Properties>
@@ -365,6 +262,20 @@
             <Property name="editable" type="boolean" value="false"/>
             <Property name="toolTipText" type="java.lang.String" value="exp: 0xx-xxxxxxx"/>
           </Properties>
+        </Component>
+        <Component class="javax.swing.JLabel" name="jlblIC">
+          <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="24" style="0"/>
+            </Property>
+            <Property name="horizontalAlignment" type="int" value="4"/>
+            <Property name="text" type="java.lang.String" value="IC No:"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JTextField" name="jtfIC">
+          <AccessibilityProperties>
+            <Property name="AccessibleContext.accessibleDescription" type="java.lang.String" value="exp: 001230-08-2341"/>
+          </AccessibilityProperties>
         </Component>
       </SubComponents>
     </Container>
