--- a/src/View/CustomerAdd.form
+++ b/src/View/CustomerAdd.form
@@ -30,7 +30,7 @@
           <Component id="jSeparator1" alignment="0" max="32767" attributes="0"/>
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="jlblHeader" pref="472" max="32767" attributes="0"/>
+              <Component id="jlblHeader" max="32767" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
           <Component id="jPanel1" alignment="0" max="32767" attributes="0"/>
@@ -73,7 +73,7 @@
           <Color blue="0" green="0" red="99" type="rgb"/>
         </Property>
         <Property name="horizontalAlignment" type="int" value="0"/>
-        <Property name="text" type="java.lang.String" value="Customer Maintenance"/>
+        <Property name="text" type="java.lang.String" value="Add Customer "/>
       </Properties>
     </Component>
     <Container class="javax.swing.JPanel" name="jPanel1">
@@ -87,10 +87,10 @@
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
-                  <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="1" attributes="0">
+                  <EmptySpace min="-2" pref="42" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="1" max="-2" attributes="0">
+                      <Component id="jlblLocation" min="-2" pref="172" max="-2" attributes="0"/>
                       <Component id="jlblCreditLimit" min="-2" pref="172" max="-2" attributes="0"/>
-                      <Component id="jcboxCorporateCustomer" min="-2" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="jlblGender" min="-2" pref="172" max="-2" attributes="0"/>
                           <Component id="jlblName" min="-2" pref="172" max="-2" attributes="0"/>
@@ -98,6 +98,8 @@
                           <Component id="jlblIC" alignment="0" min="-2" pref="172" max="-2" attributes="0"/>
                       </Group>
                       <Component id="jbAdd" min="-2" pref="101" max="-2" attributes="0"/>
+                      <Component id="jcboxCorporateCustomer" max="32767" attributes="0"/>
+                      <Component id="jlblCompanyName" alignment="1" max="32767" attributes="0"/>
                   </Group>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" attributes="0">
@@ -106,16 +108,18 @@
                               <Component id="jtfName" min="-2" pref="207" max="-2" attributes="0"/>
                               <Component id="jtfContact" min="-2" pref="207" max="-2" attributes="0"/>
                               <Component id="jcbGender" alignment="0" min="-2" max="-2" attributes="0"/>
-                              <Component id="jtfCreditLimit" alignment="0" min="-2" pref="207" max="-2" attributes="0"/>
                               <Component id="jtfIC" alignment="0" min="-2" pref="207" max="-2" attributes="0"/>
+                              <Component id="jtfCompanyName" alignment="0" min="-2" pref="207" max="-2" attributes="0"/>
+                              <Component id="jScrollPane1" min="-2" pref="243" max="-2" attributes="0"/>
+                              <Component id="jtfCreditLimit" alignment="0" min="-2" pref="207" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
-                          <EmptySpace min="-2" pref="53" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="64" max="-2" attributes="0"/>
                           <Component id="jbCancel" min="-2" pref="116" max="-2" attributes="0"/>
                       </Group>
                   </Group>
-                  <EmptySpace pref="58" max="32767" attributes="0"/>
+                  <EmptySpace pref="126" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -147,19 +151,29 @@
                       <Component id="jlblContact" max="32767" attributes="0"/>
                       <Component id="jtfContact" max="32767" attributes="0"/>
                   </Group>
-                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Component id="jcboxCorporateCustomer" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Component id="jlblCompanyName" alignment="0" min="-2" pref="39" max="-2" attributes="0"/>
+                      <Component id="jtfCompanyName" alignment="0" min="-2" pref="39" max="-2" attributes="0"/>
+                  </Group>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="jtfCreditLimit" max="32767" attributes="0"/>
-                      <Component id="jlblCreditLimit" max="32767" attributes="0"/>
+                      <Component id="jlblLocation" min="-2" pref="39" max="-2" attributes="0"/>
+                      <Component id="jScrollPane1" min="-2" pref="74" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace min="-2" pref="46" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="6" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="jbAdd" alignment="3" min="-2" pref="53" max="-2" attributes="0"/>
-                      <Component id="jbCancel" alignment="3" min="-2" pref="53" max="-2" attributes="0"/>
+                      <Component id="jtfCreditLimit" alignment="3" min="-2" pref="39" max="-2" attributes="0"/>
+                      <Component id="jlblCreditLimit" alignment="3" min="-2" pref="39" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace min="-2" pref="42" max="-2" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="jbCancel" alignment="3" min="-2" pref="53" max="-2" attributes="0"/>
+                      <Component id="jbAdd" alignment="3" min="-2" pref="53" max="-2" attributes="0"/>
+                  </Group>
+                  <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -233,6 +247,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Cancel"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbCancelActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JCheckBox" name="jcboxCorporateCustomer">
           <Properties>
@@ -257,10 +274,10 @@
             <Property name="text" type="java.lang.String" value="Credit Limit:"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="jtfCreditLimit">
+        <Component class="javax.swing.JTextField" name="jtfCompanyName">
           <Properties>
             <Property name="editable" type="boolean" value="false"/>
-            <Property name="toolTipText" type="java.lang.String" value="exp: 0xx-xxxxxxx"/>
+            <Property name="toolTipText" type="java.lang.String" value=""/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jlblIC">
@@ -273,10 +290,53 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="jtfIC">
+          <Properties>
+            <Property name="toolTipText" type="java.lang.String" value="exp: 001230-08-2341"/>
+          </Properties>
           <AccessibilityProperties>
-            <Property name="AccessibleContext.accessibleDescription" type="java.lang.String" value="exp: 001230-08-2341"/>
+            <Property name="AccessibleContext.accessibleDescription" type="java.lang.String" value=""/>
           </AccessibilityProperties>
         </Component>
+        <Component class="javax.swing.JLabel" name="jlblLocation">
+          <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="24" style="0"/>
+            </Property>
+            <Property name="horizontalAlignment" type="int" value="4"/>
+            <Property name="text" type="java.lang.String" value="Location:"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JLabel" name="jlblCompanyName">
+          <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="24" style="0"/>
+            </Property>
+            <Property name="horizontalAlignment" type="int" value="4"/>
+            <Property name="text" type="java.lang.String" value="Company Name:"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JTextField" name="jtfCreditLimit">
+          <Properties>
+            <Property name="editable" type="boolean" value="false"/>
+            <Property name="toolTipText" type="java.lang.String" value=""/>
+          </Properties>
+        </Component>
+        <Container class="javax.swing.JScrollPane" name="jScrollPane1">
+          <AuxValues>
+            <AuxValue name="autoScrollPane" type="java.lang.Boolean" value="true"/>
+          </AuxValues>
+
+          <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
+          <SubComponents>
+            <Component class="javax.swing.JTextArea" name="jtaLocation">
+              <Properties>
+                <Property name="editable" type="boolean" value="false"/>
+                <Property name="columns" type="int" value="20"/>
+                <Property name="rows" type="int" value="5"/>
+              </Properties>
+            </Component>
+          </SubComponents>
+        </Container>
       </SubComponents>
     </Container>
     <Component class="javax.swing.JSeparator" name="jSeparator1">
