--- a/src/View/AddFlowersConfirm.form
+++ b/src/View/AddFlowersConfirm.form
@@ -25,92 +25,109 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" attributes="0">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="jlblTitle" pref="625" max="32767" attributes="0"/>
                   <Group type="102" attributes="0">
-                      <EmptySpace min="-2" pref="46" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="58" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Group type="102" attributes="0">
-                              <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="jlblType" alignment="0" min="-2" pref="172" max="-2" attributes="0"/>
-                                  <Component id="jlblPrice" alignment="0" min="-2" pref="172" max="-2" attributes="0"/>
-                                  <Component id="jlblStock" alignment="0" min="-2" pref="172" max="-2" attributes="0"/>
-                                  <Component id="jlblDescription" alignment="0" min="-2" pref="172" max="-2" attributes="0"/>
-                              </Group>
-                              <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                  <Component id="jtfPrice" max="32767" attributes="0"/>
-                                  <Component id="jtfProdName" max="32767" attributes="0"/>
-                                  <Component id="jType" pref="247" max="32767" attributes="0"/>
-                                  <Component id="jtfStock" max="32767" attributes="0"/>
-                                  <Component id="jtfDescription" alignment="0" max="32767" attributes="0"/>
-                              </Group>
-                          </Group>
+                          <Component id="jlblProdID" alignment="0" min="-2" pref="172" max="-2" attributes="0"/>
+                          <Component id="jlblType" min="-2" pref="172" max="-2" attributes="0"/>
                           <Component id="jlblProdName" min="-2" pref="172" max="-2" attributes="0"/>
+                          <Component id="jlblPrice" alignment="0" min="-2" pref="172" max="-2" attributes="0"/>
+                          <Component id="jlblDescription" alignment="0" min="-2" pref="172" max="-2" attributes="0"/>
+                          <Component id="jlblStock" alignment="0" min="-2" pref="172" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                      <EmptySpace min="-2" pref="39" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="1" attributes="0">
+                          <Component id="jtfProdID" alignment="0" max="32767" attributes="0"/>
+                          <Component id="jtfProdName" max="32767" attributes="0"/>
+                          <Component id="jtfType" max="32767" attributes="0"/>
+                          <Component id="jtfDescription" alignment="0" max="32767" attributes="0"/>
+                          <Component id="jtfStock" alignment="1" max="32767" attributes="0"/>
+                          <Component id="jtfPrice" alignment="0" max="32767" attributes="0"/>
+                      </Group>
+                      <EmptySpace min="-2" pref="107" max="-2" attributes="0"/>
+                  </Group>
+                  <Component id="jlblTitle" alignment="1" pref="623" max="32767" attributes="0"/>
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="jlblHeader" max="32767" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
-          <Group type="102" attributes="0">
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="161" max="-2" attributes="0"/>
-                      <Component id="jConfirm" min="-2" pref="103" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="98" max="-2" attributes="0"/>
-                      <Component id="jCancel" min="-2" pref="92" max="-2" attributes="0"/>
-                  </Group>
-                  <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="183" max="-2" attributes="0"/>
-                      <Component id="jlblHeader" min="-2" pref="255" max="-2" attributes="0"/>
-                  </Group>
-              </Group>
-              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+          <Group type="102" alignment="0" attributes="0">
+              <EmptySpace min="-2" pref="179" max="-2" attributes="0"/>
+              <Component id="jConfirm" min="-2" pref="103" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="88" max="-2" attributes="0"/>
+              <Component id="jCancel" min="-2" pref="92" max="-2" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="0" attributes="0">
+          <Group type="102" attributes="0">
               <Component id="jlblTitle" min="-2" max="-2" attributes="0"/>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Component id="jlblHeader" min="-2" pref="43" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="jlblHeader" min="-2" pref="49" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jlblProdName" alignment="3" pref="103" max="32767" attributes="0"/>
+                  <Component id="jlblProdID" alignment="3" max="32767" attributes="0"/>
+                  <Component id="jtfProdID" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="jlblProdName" alignment="3" pref="33" max="32767" attributes="0"/>
                   <Component id="jtfProdName" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jType" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="jlblType" alignment="3" max="32767" attributes="0"/>
+                  <Component id="jlblType" alignment="3" pref="48" max="32767" attributes="0"/>
+                  <Component id="jtfType" alignment="3" max="32767" attributes="0"/>
               </Group>
-              <EmptySpace max="32767" attributes="0"/>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="jlblPrice" alignment="3" pref="53" max="32767" attributes="0"/>
                   <Component id="jtfPrice" alignment="3" max="32767" attributes="0"/>
               </Group>
-              <EmptySpace max="-2" attributes="0"/>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="jlblDescription" alignment="3" pref="30" max="32767" attributes="0"/>
                   <Component id="jtfDescription" alignment="3" max="32767" attributes="0"/>
               </Group>
-              <EmptySpace max="-2" attributes="0"/>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jlblStock" alignment="3" pref="55" max="32767" attributes="0"/>
+                  <Component id="jlblStock" alignment="3" pref="53" max="32767" attributes="0"/>
                   <Component id="jtfStock" alignment="3" max="32767" attributes="0"/>
               </Group>
-              <EmptySpace min="-2" pref="23" max="-2" attributes="0"/>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jCancel" alignment="3" min="-2" pref="36" max="-2" attributes="0"/>
                   <Component id="jConfirm" alignment="3" min="-2" pref="36" max="-2" attributes="0"/>
+                  <Component id="jCancel" alignment="3" min="-2" pref="36" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
   </Layout>
   <SubComponents>
+    <Component class="javax.swing.JLabel" name="jlblProdID">
+      <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Tahoma" size="24" style="0"/>
+        </Property>
+        <Property name="horizontalAlignment" type="int" value="4"/>
+        <Property name="text" type="java.lang.String" value="Product ID:"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="jlblProdName">
+      <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Tahoma" size="24" style="0"/>
+        </Property>
+        <Property name="horizontalAlignment" type="int" value="4"/>
+        <Property name="text" type="java.lang.String" value="Product Name:"/>
+      </Properties>
+    </Component>
     <Component class="javax.swing.JLabel" name="jlblTitle">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
@@ -135,15 +152,6 @@
         <Property name="text" type="java.lang.String" value="Catalog Maintenance"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="jlblProdName">
-      <Properties>
-        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Tahoma" size="24" style="0"/>
-        </Property>
-        <Property name="horizontalAlignment" type="int" value="4"/>
-        <Property name="text" type="java.lang.String" value="Product Name:"/>
-      </Properties>
-    </Component>
     <Component class="javax.swing.JLabel" name="jlblType">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
@@ -160,6 +168,15 @@
         </Property>
         <Property name="horizontalAlignment" type="int" value="4"/>
         <Property name="text" type="java.lang.String" value="Price:"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="jlblDescription">
+      <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Tahoma" size="24" style="0"/>
+        </Property>
+        <Property name="horizontalAlignment" type="int" value="4"/>
+        <Property name="text" type="java.lang.String" value="Description:"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jlblStock">
@@ -193,35 +210,20 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jCancelActionPerformed"/>
       </Events>
     </Component>
+    <Component class="javax.swing.JTextField" name="jtfProdID">
+      <Properties>
+        <Property name="editable" type="boolean" value="false"/>
+      </Properties>
+    </Component>
     <Component class="javax.swing.JTextField" name="jtfProdName">
     </Component>
-    <Component class="javax.swing.JComboBox" name="jType">
-      <Properties>
-        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="2">
-            <StringItem index="0" value="Bounquet"/>
-            <StringItem index="1" value="Pot"/>
-          </StringArray>
-        </Property>
-      </Properties>
-      <AuxValues>
-        <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
-      </AuxValues>
+    <Component class="javax.swing.JTextField" name="jtfType">
     </Component>
-    <Component class="javax.swing.JTextField" name="jtfPrice">
+    <Component class="javax.swing.JTextField" name="jtfDescription">
     </Component>
     <Component class="javax.swing.JTextField" name="jtfStock">
     </Component>
-    <Component class="javax.swing.JLabel" name="jlblDescription">
-      <Properties>
-        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Tahoma" size="24" style="0"/>
-        </Property>
-        <Property name="horizontalAlignment" type="int" value="4"/>
-        <Property name="text" type="java.lang.String" value="Description:"/>
-      </Properties>
-    </Component>
-    <Component class="javax.swing.JTextField" name="jtfDescription">
+    <Component class="javax.swing.JTextField" name="jtfPrice">
     </Component>
   </SubComponents>
 </Form>
